# django-authenticator

./: .gitignore  README.md  setup.cfg  setup.py
djangoauthenticator/: djangoauthenticator.py
src/djangoauthenticator/: djangoauthenticator.py
tests/: userid.py
