[metadata]
name = django-authenticator-gdaley
version = 0.1.0-alpha
author = Graham Daley
author_email = gd@codicy.co
description = Authenticate to JupyterHub using an active Django login session
keywords = jupyterhub, django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Codicy/django-authenticator
project_urls =
    Bug Tracker = https://github.com/Codicy/django-authenticator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License :: 2
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jupyterhub
    mysql-connector-python

[options.packages.find]
where = src